[project]
name = "tilejson"
description = "Create simple map viewer from TileJSON URL"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "click",
    "jinja2>=2.11.2,<4.0.0",
    "starlette",
    "importlib_resources>=1.1.0; python_version < '3.9'",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pre-commit",
]

[project.urls]
Source = "https://github.com/developmentseed/tilejson"

[project.scripts]
tilejson = "tilejson.cli:tilejson"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tilejson/__init__.py"
